--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Louis J. Kang</title>
+    <title>Tay Shin</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -17,10 +17,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Louis J. Kang</h1>
-        <p><b>Harvard PhD student in Applied Physics</b><br>
-        <b>Working at MIT Media Lab</b><br>
-        <b>Berkeley hustler at heart</b></p>
+        <h1>Tay Shin</h1>
+        <p>
+        <b>Working with Prof. Ed Boyden at MIT</b><br>
+        <b>Former Data Scientist at Korea National Defense</b><br>
+        <b>BA in Statistics from UC Berkeley</b>
+        </p>
         <br>
         
       </header>
