--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <header>
         <h1>Tay Shin</h1>
         <p>
-        <b>Working with <a href="http://syntheticneurobiology.org/" target="_blank">Prof. Ed Boyden</a> at MIT</b><br>
-        <b>Former Data Scientist at <a href="https://en.wikipedia.org/wiki/Ministry_of_National_Defense_(South_Korea)" target="_blank">Korea MND</a></b><br>
-        <b>BA in Statistics from UC Berkeley</b>
+        Working with <b><a href="http://syntheticneurobiology.org/" target="_blank">Prof. Ed Boyden</a></b> at MIT<br>
+        Former Data Scientist at <b><a href="https://en.wikipedia.org/wiki/Ministry_of_National_Defense_(South_Korea)" target="_blank">Korea MND</a></b><br>
+        BA in Statistics from UC Berkeley
         </p>
         <br>
         
