--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
       </section>
       <footer>
         <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>
+        <br>
+        Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a>
       </footer>
     </div>
 
