--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <footer>
         <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>
         <br>
-        Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a>
+        <SPAN STYLE="font-size: 8pt"> Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</SPAN></a>
       </footer>
     </div>
 
