--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         
       </section>
       <footer>
-        <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>
-        <br>
+        <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>t
         <SPAN STYLE="font-size: 8pt"> Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></SPAN>
       </footer>
     </div>
