--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         Former Data Scientist at <b><a href="https://en.wikipedia.org/wiki/Ministry_of_National_Defense_(South_Korea)" target="_blank">Korea MND</a></b><br>
         BA in Statistics from UC Berkeley
         </p>
+        <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>
         <br>
         <p>
         I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. 
@@ -43,7 +44,6 @@
         
       </section>
       <footer>
-        <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>t
         <SPAN STYLE="font-size: 8pt"> Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></SPAN>
       </footer>
     </div>
