--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <h2>Past</h2>
         <p>         I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. 
- </p>
+ </p> <img src="images/test.jpg" alt="test">
         
       </section>
       <footer>
