--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     <div class="wrapper">
       <header>
         <h1>Tay Shin</h1>
-        <p>
+          <p><span style="color:black">
         Working with <b><a href="http://syntheticneurobiology.org/" target="_blank">Prof. Ed Boyden</a></b> at MIT<br>
         Former Data Scientist at <b><a href="https://en.wikipedia.org/wiki/Ministry_of_National_Defense_(South_Korea)" target="_blank">Korea MND</a></b><br>
         BA in Statistics from UC Berkeley
-        </p>
+          </p></span>
         <br>
-        <p>
+          <p><span style="color:black">
         I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. 
-        </p>
-        <p>Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</span></a></p>
+         </p></span>
+          <p><span style="color:black">
+        Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</a>
+         </p></span>
 
         
         
