--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </p></span>
         <br>
           <p><span style="color:black">
-        I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. 
-         </p></span>
+I want to understand how the brain works. Utilizing my computational/statistics background and fast-growing new experimental skillsets, I am determined to design scalable, open-source tools that address the end-to-end pipeline – from experiments to data analysis to sharing data with other researchers around the world for fruitful collaborations – and figure out how many discrete cell types exist and how they are connected in the brain, at the level of synaptic connections. 
+          </p></span>
           <p><span style="color:black">
         Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</a>
          </p></span>
