--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@ I want to understand how the brain works. Utilizing my computational/statistics 
         <h1>Research</h1>
         <h2>Current</h2>
         <p><span style="color:black">
-          I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. 
- </p> <img src="images/test.jpg" alt="test">
+          <SPAN STYLE="font-size: 12pt" "color:black"><b> Tool development for connectomics research </b></span>
+          </p> <img src="images/test.jpg" alt="test">
         
         <h2>Past</h2>
         <p><span style="color:black">
           I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. I am a machine. 
- </p> <img src="images/test.jpg" alt="test">
+ </p> <img src="images/brainbow.jpg" alt="brainbow">         
+          <SPAN STYLE="font-size: 8pt" "color:black"> Image from <a href="http://syntheticneurobiology.org/publications/publicationdetail/251/25" target="_blank">Tillberg and Chen, et al. Nat. Biotech. 34:987–992.</a></SPAN>
+
         
       </section>
       <footer>
