--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ I want to understand how the brain works. Utilizing my computational/statistics 
         <h2>Current</h2>
         <p><span style="color:black">
           <SPAN STYLE="font-size: 12pt" "color:black"><b> Tool development for brain mapping (Feb 2017 - Current) </b></span> <br>
-          <i>Prof. Ed Boyden's Synthetic Neurobiology Group, MIT Media Lab</i>, Cambridge, MA
+          <i><a href="http://syntheticneurobiology.org/" target="_blank">Prof. Ed Boyden</a>'s Synthetic Neurobiology Group, MIT Media Lab</i>, Cambridge, MA
           <br><br>
           
           Recently, researchers at Professor Ed Boyden’s lab at MIT demonstrated a proof of concept work for scalable neuronal mapping [<a href="http://syntheticneurobiology.org/publications/publicationdetail/229/25" target="_blank">1</a>].
