--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ I want to understand how the brain works. Utilizing my computational/statistics 
           <br><br>
           
           Recently, researchers at Professor Ed Boyden’s lab at MIT demonstrated a proof of concept work for scalable neuronal mapping [<a href="http://syntheticneurobiology.org/publications/publicationdetail/229/25" target="_blank">1</a>].
-          Known as Expansion Microscopy (ExM), this technique is a completely novel way to resolve nanometer scale structures of the brain
+          Known as Expansion Microscopy (<a href="expansionmicroscopy.org/" target="_blank">ExM</a>), this technique is a completely novel way to resolve nanometer scale structures of the brain
           on a conventional, high-speed, diffraction-limited microscope. By synthesizing a swellable polymer network within the specimen 
           and anchoring the biomolecules of interest (i.e., synaptic proteins, phospholipids, etc.) to the network, the molecules can be 
           physically separated thorough isotropic expansion, after the pre-existing bonds between them are disrupted with relevant enzymes
