--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ I want to understand how the brain works. Utilizing my computational/statistics 
           the military's personnel budget (around $15B). Implementation of the model has been saving around $20M annually for the military. 
           During the process, I built a dynamic programming econometrics model for predicting each military personnel's future 
           stay/leave behavior and convined the policy makers to adopt the model nationwide. 
-          <img src="images/stayleave.png" alt="stayleave"> 
+          <img src="images/stayleave.PNG" alt="stayleave"> 
           
         </p> 
         
