--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 I want to understand how the brain works. Utilizing my computational/statistics background and fast-growing new experimental skillsets, I am determined to design scalable, open-source tools that address the end-to-end pipeline – from experiments to data analysis to sharing data with other researchers around the world for fruitful collaborations – and figure out how many discrete cell types exist and how they are connected in the brain, at the level of synaptic connections. 
           </p></span>
           <p><span style="color:black">
-        Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</a>
-            [<a href="/tay_resume.pdf" target="_blank">Resume</a>] 
+        Contact me at <a href="mailto:tayshin@mit.edu">tayshin@mit.edu</a> 
+            <br>
+            [<a href="images/tay_resume.pdf" target="_blank">Resume</a>] 
          </p></span>
 
         
